# serializer version: 1
# name: test_all_entities[sensor.accounts_credit_card-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.accounts_credit_card',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Credit Card',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Credit Card',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'account_balance',
    'unique_id': 'test_api_key_account_4_account_balance',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.accounts_credit_card-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'account_role': 'creditCard',
      'account_type': 'revenue',
      'device_class': 'monetary',
      'friendly_name': 'Accounts Credit Card',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.accounts_credit_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-250.00',
  })
# ---
# name: test_all_entities[sensor.accounts_my_checking_account-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.accounts_my_checking_account',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'My checking account',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'My checking account',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'account_balance',
    'unique_id': 'test_api_key_account_2_account_balance',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.accounts_my_checking_account-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'account_role': 'Default asset',
      'account_type': 'asset',
      'device_class': 'monetary',
      'friendly_name': 'Accounts My checking account',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.accounts_my_checking_account',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123.45',
  })
# ---
# name: test_all_entities[sensor.accounts_savings_account-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.accounts_savings_account',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Savings Account',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Savings Account',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'account_balance',
    'unique_id': 'test_api_key_account_3_account_balance',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.accounts_savings_account-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'account_role': 'savingsAsset',
      'account_type': 'expense',
      'device_class': 'monetary',
      'friendly_name': 'Accounts Savings Account',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.accounts_savings_account',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5000.00',
  })
# ---
# name: test_all_entities[sensor.budgets_bills_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.budgets_bills_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bills limit',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Bills limit',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'budget_limit',
    'unique_id': 'test_api_key_budget_2_budget_limit',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.budgets_bills_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Budgets Bills limit',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.budgets_bills_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '500.0',
  })
# ---
# name: test_all_entities[sensor.budgets_bills_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.budgets_bills_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bills remaining',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Bills remaining',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'budget_remaining',
    'unique_id': 'test_api_key_budget_2_budget_remaining',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.budgets_bills_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Budgets Bills remaining',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.budgets_bills_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '623.45',
  })
# ---
# name: test_all_entities[sensor.budgets_bills_spent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.budgets_bills_spent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bills spent',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Bills spent',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'budget',
    'unique_id': 'test_api_key_budget_2_budget',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.budgets_bills_spent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Budgets Bills spent',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.budgets_bills_spent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123.45',
  })
# ---
# name: test_all_entities[sensor.categories_lunch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.categories_lunch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lunch',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Lunch',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'category',
    'unique_id': 'test_api_key_category_2_category',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.categories_lunch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Categories Lunch',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.categories_lunch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-12300.0',
  })
# ---
# name: test_all_entities[sensor.subscriptions_already_paid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.subscriptions_already_paid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Already paid',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Already paid',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subscription_already_paid',
    'unique_id': 'test_api_key_subscriptions_already_paid',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.subscriptions_already_paid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Subscriptions Already paid',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.subscriptions_already_paid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor.subscriptions_rent_expected_amount-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.subscriptions_rent_expected_amount',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rent expected amount',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Rent expected amount',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subscription_amount',
    'unique_id': 'test_api_key_bill_2_subscription_amount',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.subscriptions_rent_expected_amount-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Subscriptions Rent expected amount',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.subscriptions_rent_expected_amount',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123.45',
  })
# ---
# name: test_all_entities[sensor.subscriptions_rent_last_paid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.subscriptions_rent_last_paid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rent last paid',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Rent last paid',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subscription_last_paid',
    'unique_id': 'test_api_key_bill_2_subscription_last_paid',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.subscriptions_rent_last_paid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Subscriptions Rent last paid',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.subscriptions_rent_last_paid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2018-09-17T11:46:47+00:00',
  })
# ---
# name: test_all_entities[sensor.subscriptions_rent_next_expected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.subscriptions_rent_next_expected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rent next expected',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Rent next expected',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subscription_next_expected',
    'unique_id': 'test_api_key_bill_2_subscription_next_expected',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.subscriptions_rent_next_expected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Subscriptions Rent next expected',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.subscriptions_rent_next_expected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2018-09-17T11:46:47+00:00',
  })
# ---
# name: test_all_entities[sensor.subscriptions_total_expected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.subscriptions_total_expected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total expected',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Total expected',
    'platform': 'firefly_iii',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subscription_total_expected',
    'unique_id': 'test_api_key_subscriptions_total_expected',
    'unit_of_measurement': 'AMS',
  })
# ---
# name: test_all_entities[sensor.subscriptions_total_expected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Subscriptions Total expected',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'AMS',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.subscriptions_total_expected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
